welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:17: error: Int(1) does not take parameters
  	{while (!estFaceMur()) {numeroterSol(); setPos(getX+1(),getY())} }
                                                             ^LineByLine:21: error: not enough arguments for method setY: (x$1: Int)Unit.
Unspecified value parameter x$1.
  	{if (estFaceMur()) {numeroterSol(); setPos(0, setY()+1)}}
                                                          ^